--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ jdk:
    - oraclejdk8
 after_success: 
 -bash <(curl -s https://codecov.io/bash)
+env :
+   global :
+    - CODECOV_TOKEN =:"b41229e3-369a-411b-af8e-d783a11c0ca7"
